<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sroy8091.justjava.MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
<EditText
    android:id="@+id/custom_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:hint="Customer's Name"
    android:layout_marginBottom="16dp"/>
    <TextView
        style="@style/HeaderTextStyle"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/toppings"/>

    <CheckBox
        android:id="@+id/cream_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:paddingLeft="24dp"
        android:text="@string/cream"
        android:textSize="16sp"
        android:checked="true"/>

    <CheckBox
        android:id="@+id/chocolate_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:paddingLeft="24dp"
        android:text="@string/chocolate"
        android:textSize="16sp" />

    <TextView
        style="@style/HeaderTextStyle"
        android:layout_marginBottom="16dp"
        android:text="@string/quantity"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:onClick="decreament"
            android:text="-" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:onClick="increament"
            android:text="+" />
    </LinearLayout>

    <TextView
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/order_summary"
        style="@style/HeaderTextStyle"/>

    <TextView
        android:id="@+id/order_summary_text_view"
        android:text="Total Price = $10"
        android:textColor="@android:color/black"
        style="@style/HeaderTextStyle"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="submitOrder"
        android:text="Order"
        android:textAllCaps="true" />

</LinearLayout>
</ScrollView>